fixed bug with overlapping delimiter border. Added open event

--- a/assets/DropdownContent.less
+++ b/assets/DropdownContent.less
@@ -8,8 +8,8 @@
     position: absolute;
     z-index: 1000;
     min-width: 160px;
-    padding: 5px 0px;
-    margin: 2px 0px 0px -15px;
+    padding: 5px 0;
+    margin: 2px 0 0 -15px;
     font-size: 14px;
     text-align: left;
     background-color: #FFF;
@@ -51,9 +51,9 @@
     }
 
     div.item {
-      padding: 4px 0px 9px 4px;
-      border-bottom-right-radius: 0px;
-      border-bottom-left-radius: 0px;
+      padding: 4px 0 9px 4px;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
       border-bottom: medium none white;
       background: white none repeat scroll 0% 0%;
       margin-bottom: -3px;
@@ -90,18 +90,17 @@
   .controll-wrapper {
     position: absolute;
     border-left: 1px solid #CCC;
-    top: 0px;
-    right: 0px;
-    padding: 7px 6px 9px 5px;
+    top: 1px;
+    right: 0;
     width: 19px;
-    height: 33px;
+    height: 30px;
     cursor: pointer;
     .clear {
+      top: 1px;
       opacity: 0.4;
       position: absolute;
       right: 25px;
       font-size: 18px;
-      top: 2px;
       &:hover {
         opacity: 0.6;
       }
@@ -112,7 +111,7 @@
       position: absolute;
       right: 6px;
       font-size: 18px;
-      top: 15px;
+      top: 13px;
     }
   }
 
@@ -126,8 +125,8 @@
     }
 
     .dropdown-wrapper input {
-      border-bottom-right-radius: 0px;
-      border-bottom-left-radius: 0px;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
       border-bottom: medium none white;
       background: white none repeat scroll 0% 0%;
       margin-bottom: -3px;
